--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,12 +3,17 @@ nodaemon=true
 
 [program:nginx]
 directory = /etc/nginx
-command = /usr/local/sbin/nginx -c /etc/nginx/nginx.conf
+command = /usr/sbin/nginx -c /etc/nginx/nginx.conf
 autorestart = true
 
 [program:php5-fpm]
 directory = /etc/php5
 command = /usr/sbin/php5-fpm -R --fpm-config /etc/php5/fpm/php-fpm.conf
+autorestart = true
+
+[program:cron]
+directory = /etc/cron.d/
+command = /usr/sbin/cron -f
 autorestart = true
 
 
