--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ events {
 }
 
 http {
+    client_max_body_size 100m;
 	include mime.types;
 	default_type application/octet-stream;
 	index index.html;
